--- a/assignments/assignment-3/index.html
+++ b/assignments/assignment-3/index.html
@@ -17,9 +17,9 @@
         <source src="./assignment.mov" type="video/mov">
         <source src="./assignment.mp4" type="video/mp4">        
     </video>
-    <video height="400" width="400">
+    <video height="400" width="400" controls>
         <source src="../assignment-2/assignment.mov" type="video/mov">
-        <source src="../assignment-2/assignment.mp4" type="videp/mp4">
+        <source src="../assignment-2/assignment.mp4" type="video/mp4">
     </video>
 
     
