--- a/assignments/assignment-3/index.html
+++ b/assignments/assignment-3/index.html
@@ -21,7 +21,58 @@
         <source src="../assignment-2/assignment.mov" type="video/mov">
         <source src="../assignment-2/assignment.mp4" type="video/mp4">
     </video>
+    <iframe 
+          width="560"
+          height="315" 
+          src="https://www.youtube.com/embed/q8TnUdLWm-s" 
+          title="YouTube video player" frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+    </iframe>
+    <iframe 
+          width="560"
+           height="315" \
+           src="https://www.youtube.com/embed/cHqfk5lMw-E" 
+           title="YouTube video player" 
+           frameborder="0" 
+           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+           allowfullscreen>
 
+    </iframe>
+    <iframe 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/AwW8s_r4g4w" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+
+    </iframe>
+
+    <iframe
+         height="400"
+         width="800" 
+         src="../../lectures/lists.html" 
+         frameborder="10">
+    </iframe>
+
+    <iframe
+    height="400"
+    width="800" 
+    src="https://daryo.uz" 
+    frameborder="10">
+</iframe>
+ 
+<iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3053.0519731293075!2d-75.0399144241904!3d40.07425277149666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b392b2a48c85%3A0xbb91cc4b5d3077ed!2s2301%20Tremont%20St%2C%20Philadelphia%2C%20PA%2019115!5e0!3m2!1sen!2sus!4v1681934079319!5m2!1sen!2sus" 
+    width="600" 
+    height="450" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+</iframe>
     
     
 </body>
