--- a/assignments/assignment-4/index.html
+++ b/assignments/assignment-4/index.html
@@ -8,5 +8,24 @@
         Discovering the World with HTML Tables: A Country Data Project
      </title>
      
+</head>
+<body>
+    <h1>Country Date</h1>
+    <p>
+        This table showcases data for 10 different countries, including
+        population, area, GDP per capita, capital city, official languages,
+        and currency.
+    </p>
+    <thead>
+        <tr>
+            <th>Country</th>
+            <th>Population</th>
+            <th>Area (sq. km)</th>
+            <th>GDP per capita (USD)</th>
+            <th>Capital City</th>
+            <th>Official Language(s)</th>
+            <th>Currency</th>
+        </tr>
+    </thead>
 </body>
 </html>
