--- a/assignments/assignment-4/index.html
+++ b/assignments/assignment-4/index.html
@@ -7,6 +7,20 @@
     <title>
         Discovering the World with HTML Tables: A Country Data Project
      </title>
+     <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th,
+        td {
+            border: 1px solid black;
+            text-align: center;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+     </style>
      
 </head>
 <body>
