--- a/assignments/assignment-4/index.html
+++ b/assignments/assignment-4/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Discovering the World with HTML Tables: A Country Data Project
-     </title>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>
+            Discovering the World with HTML Tables: A Country Data Project
+        </title>
      <style>
         table {
             border-collapse: collapse;
@@ -142,7 +142,7 @@
         <tfoot>
             <tr>
                 <td colspan="7">
-                    Data source: [Add your data source here]<br />
+                    Data source: []<br />
                     Note: This data is based on 2021 figures and may not be
                     up-to-date. Please consult the original source for the
                     latest information.
