--- a/lectures/emphasis.html
+++ b/lectures/emphasis.html
@@ -7,7 +7,7 @@
         <title>Emphasis</title>
     </head>
     <body>
-        <p>She felt a sudden rush of <em>excitment.</em></p>
+        <p>She felt a sudden rush of <em>excitment</em>.</p>
         <p>
             I <strong>strongly</strong> believe that everyone deserves high quality education
         </p>
