--- a/lectures/videos.html
+++ b/lectures/videos.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <video src="./videos/today.mp4" controls width="600">
+            This video is not supported
+        </video>
+        <video height="320" width="600" controls autoplay muted>
+            <source src="./videos/today.mov" type="video/mov" />
+            <source src="./videos/today.mp4" type="video/mp4" />
+            This video is not supported
+        </video>
+
+        <video height="320" width="600" controls autoplay muted>
+            <source src="today.mov" type="video/mov" />
+            <source src="today.mp4" type="video/mp4" />
+            This video is not supported
+        </video>
+    </body>
 </html>
