Added styles to assignment-5

--- a/assignments/assignment-5/index.html
+++ b/assignments/assignment-5/index.html
@@ -7,6 +7,20 @@
         <title>
             Exploring the Heights: An HTML Table Project on the World's Tallest Mountains.
         </title>
+        <style>
+            table {
+                border-collapse: collapse;
+                width: 100%;
+            }
+            th,
+            td {
+                border: 1px solid black;
+                text-align: center;
+            }
+            th {
+                background-color: #f2f2f2;
+            }
+        </style>
     </head>
     <body>
         <h1>World's Tallest Mountain</h1>
