--- a/assignments/assignment-5/index.html
+++ b/assignments/assignment-5/index.html
@@ -48,7 +48,7 @@
                     <td>8,848.86 meters</td>
                     <td>29,031.7 feet</td> 
                     <td>Nepal-China border</td>  
-                    <td>May 29, 1953, by Sir Edmund Hillary (New Zealand) and Tenzing Norgay (Nepal)</td>    
+                    <td>May 29, 1953, by Sir Edmund Hillary (New Zealand) <br> and Tenzing Norgay (Nepal)</td>    
                     <td>Himalayas</td>    
                 </tr>
 
@@ -58,7 +58,7 @@
                     <td>8,611 meters</td>
                     <td>28,251 feet</td> 
                     <td>Pakistan-China border</td>
-                    <td>July 31, 1954, by Lino Lacedelli and Achille Compagnoni (Italy)</td> 
+                    <td>July 31, 1954, by Lino Lacedelli <br> and Achille Compagnoni (Italy)</td> 
                     <td>Karakoram</td>   
                 </tr>
 
@@ -68,7 +68,7 @@
                     <td>8,586 meters</td>  
                     <td>28,169 feet</td> 
                     <td>Nepal-India border</td>
-                    <td>May 25, 1955, by Joe Brown and George Band (United Kingdom)</td> 
+                    <td>May 25, 1955, by Joe Brown and George <br> Band (United Kingdom)</td> 
                     <td>Himalayas</td>
                 </tr>
 
@@ -78,7 +78,7 @@
                     <td>8,516 meters</td>  
                     <td>27,940 feet</td> 
                     <td>Nepal-China border</td> 
-                    <td>May 18, 1956, by Fritz Luchsinger and Ernst Reiss (Switzerland)</td> 
+                    <td>May 18, 1956, by Fritz Luchsinger <br> and Ernst Reiss (Switzerland)</td> 
                     <td>Himalayas</td> 
                 </tr>
 
@@ -88,7 +88,7 @@
                     <td>8,485 meters</td>  
                     <td>27,838 feet</td> 
                     <td>Nepal-China border</td> 
-                    <td>May 15, 1955, by Lionel Terray and Jean Couzy (France)</td> 
+                    <td>May 15, 1955, by Lionel Terray <br> and Jean Couzy (France)</td> 
                     <td>Himalayas</td> 
                 </tr>
 
@@ -98,7 +98,7 @@
                     <td>8,188 meters </td> 
                     <td>26,864 feet</td> 
                     <td>Nepal-China border</td> 
-                    <td>October 19, 1954, by Herbert Tichy (Austria), Joseph Jöchler (Italy), and Sherpa Pasang Dawa Lama (Nepal)</td> 
+                    <td>October 19, 1954, by Herbert Tichy (Austria), Joseph Jöchler (Italy), <br> and Sherpa Pasang Dawa Lama (Nepal)</td> 
                     <td>Himalayas</td> 
                 </tr>
 
@@ -108,7 +108,7 @@
                     <td>8,167 meters</td>  
                     <td>26,795 feet</td>    
                     <td>Nepal</td>
-                    <td>May 13, 1960, by Kurt Diemberger, Peter Diener, Ernst Forrer, Albin Schelbert (Switzerland), Nawang Dorje, and Nima Dorje (Nepal)</td> 
+                    <td>May 13, 1960, by Kurt Diemberger, Peter Diener, Ernst Forrer, <br> Albin Schelbert (Switzerland), Nawang Dorje, and Nima Dorje (Nepal)</td> 
                     <td>Himalayas</td>
                 </tr>
 
@@ -118,7 +118,7 @@
                     <td>8,163 meters</td> 
                     <td>26,781 feet</td> 
                     <td>Nepal</td> 
-                    <td>May 9, 1956, by Toshio Imanishi (Japan) and Gyalzen Norbu (Nepal)</td> 
+                    <td>May 9, 1956, by Toshio Imanishi (Japan) <br> and Gyalzen Norbu (Nepal)</td> 
                     <td>Himalayas</td> 
                 </tr>
 
@@ -138,10 +138,17 @@
                     <td>8,091 meters</td> 
                     <td>26,545 feet</td> 
                     <td>Nepal</td> 
-                    <td>June 3, 1950, by Maurice Herzog and Louis Lachenal (France)</td> 
+                    <td>June 3, 1950, by Maurice Herzog <br> and Louis Lachenal (France)</td> 
                     <td>Himalayas</td> 
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">Data source: [...]</td>
+                    <td colspan="3">Note: This data is based on historical records and may not be up-to-date. Please consult the original source for the latest information.
+                    </td>
+                </tr>
+            </tfoot>
         </table>
     </body>
 </html>
