--- a/assignments/assignment-7/index.html
+++ b/assignments/assignment-7/index.html
@@ -1,57 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Multi-purpose</title>
-        <style>
-
-        </style>
+        <style></style>
     </head>
     <body>
         <form id="personal_information">
             <label for="fullNameInput">Your Full Name</label>
-            <input type="text" placeholder="Full Name" name="name" id="fullNameInput">
+            <input
+                type="text"
+                placeholder="Full Name"
+                name="name"
+                id="fullNameInput"
+            />
 
             <label for="emailInput">Email</label>
-            <input type="email" placeholder="Your Email" name="emailAddress" id="emailInput">
-            <br>
+            <input
+                type="email"
+                placeholder="Your Email"
+                name="emailAddress"
+                id="emailInput"
+            />
+            <br />
             <label for="telNumberInput">Tel Number</label>
-            <input type="tel" placeholder="Telephone Number" name="telNumber" id="telNumberInput">
+            <input
+                type="tel"
+                placeholder="Telephone Number"
+                name="telNumber"
+                id="telNumberInput"
+            />
 
             <label for="dateInput">DOB</label>
-            <input type="date" name="dateOfBirth" id="dateInput">
-            <br>
+            <input type="date" name="dateOfBirth" id="dateInput" />
+            <br />
             <label for="ageInput">Your Age</label>
-            <input type="number" name="age" id="ageInput">
+            <input type="number" name="age" id="ageInput" />
 
             <label for="male">Male</label>
-            <input type="radio" name="gender" id="male">
+            <input type="radio" name="gender" id="male" />
             <label for="female">Female</label>
-            <input type="radio" name="gender" id="female">
-
+            <input type="radio" name="gender" id="female" />
         </form>
-        <br>
-        <hr>
+        <br />
+        <hr />
         <form id="account_details">
             <label for="usernameInput">Username</label>
-            <input type="text" name="username" id="usernameInput">
+            <input type="text" name="username" id="usernameInput" />
 
             <label for="passwordInput">Password</label>
-            <input type="password" name="password" id="passwordInput">
+            <input type="password" name="password" id="passwordInput" />
 
             <label for="secretMessageInput">Your Secret Message</label>
-            <input type="hidden" name="secretMessage" id="secretMessageInput">
-
+            <input type="hidden" name="secretMessage" id="secretMessageInput" />
         </form>
 
         <form id="preferences">
             <label for="colorInput">Your Preferred color</label>
-            <input type="color" name="color" id="colorInput">
+            <input type="color" name="color" id="colorInput" />
 
             <label for="checkboxInput">Newsletter Subscription</label>
-            <input type="checkbox" name="subscriptionCheckbox" id="checkboxInput">
+            <input
+                type="checkbox"
+                name="subscriptionCheckbox"
+                id="checkboxInput"
+            />
 
             <label for="languageSelect">Preferred Language</label>
             <select name="usersLanguage" id="languageSelect">
@@ -62,61 +77,71 @@
                 <option value="Turkish">Turkish</option>
             </select>
         </form>
-        <br>
-        <hr>
+        <br />
+        <hr />
         <form id="attachment">
             <label for="profilePicture">Upload Your Profile Picture</label>
-            <input type="file" name="avatar" id="profilePicture">
+            <input type="file" name="avatar" id="profilePicture" />
         </form>
 
-        <form id="location"> 
+        <form id="location">
             <label for="websiteInput">Choose Your Location</label>
-            <input type="url" name="location" id="websiteInput">
+            <input type="url" name="location" id="websiteInput" />
         </form>
 
         <form id="feedback">
             <label for="rangeInput">Satisfaction Rating</label>
-            <input type="range" name="rating" id="rangeInput" min="1" max="10">
-            <br>
+            <input
+                type="range"
+                name="rating"
+                id="rangeInput"
+                min="1"
+                max="10"
+            />
+            <br />
             <label for="commentInput">Your Comments</label>
-            <textarea name="comments" id="commentInput" cols="30" rows="5"></textarea>
+            <textarea
+                name="comments"
+                id="commentInput"
+                cols="30"
+                rows="5"
+            ></textarea>
         </form>
 
-        <br>
-        <hr>
+        <br />
+        <hr />
 
         <form id="schedule">
             <label for="timeInput">Preferred Meeting Time</label>
-            <input type="time" name="meetingTime" id="timeInput">
+            <input type="time" name="meetingTime" id="timeInput" />
 
             <label for="weekInput">Preferred Meeting Day</label>
-            <input type="week" name="meetingDay" id="weekInput">
+            <input type="week" name="meetingDay" id="weekInput" />
 
             <label for="monthInput">Preferred Meeting Month</label>
-            <input type="month" name="meetingMonth" id="monthInput">
+            <input type="month" name="meetingMonth" id="monthInput" />
         </form>
 
         <form id="search">
             <label for="searchInput">Search for Articles</label>
-            <input type="search" name="search" id="searchInput">
-
+            <input type="search" name="search" id="searchInput" />
         </form>
 
-        <br>
+        <br />
 
         <form id="submit_reset">
-            <input type="submit" value="Submit">
-            <input type="reset" value="Reset Form Data">
+            <input type="submit" value="Submit" />
+            <input type="reset" value="Reset Form Data" />
             <button>
                 Custom Button
-                <img src="./check.png" width="10" height="10" alt="check">
+                <img src="./check.png" width="10" height="10" alt="check" />
             </button>
         </form>
 
-        <br>
-        
-        <button> <img src="./thumb-up.png" width="50" height="50" alt="like"></button>
+        <br />
 
-        
+        <button>
+            <img src="./thumb-up.png" width="50" height="50" alt="like" />
+        </button>
     </body>
 </html>
