--- a/assignment-8/index.html
+++ b/assignment-8/index.html
@@ -39,7 +39,7 @@
 
         <form id="submit">
             <label for="timezoneSelect">Choose your time-zone</label>
-            <select name="time-zone" id="timezoneSelect">
+            <select name="timezone" id="timezoneSelect">
                 <option value="UTC-12">UTC-12</option>
                 <option value="UTC-11">UTC-11</option>
                 <option value="UTC+12">UTC+12</option>
@@ -53,6 +53,5 @@
             >
         </form>
         <input type="submit" value="Submit" />
-        <form></form>
     </body>
 </html>
