--- a/assignments/assignment-8/assignment-8.2.html
+++ b/assignments/assignment-8/assignment-8.2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Assignment-8</title>
+        <title>Assignment-8.2</title>
     </head>
     <body>
         <form>
@@ -84,8 +84,8 @@
 
             <br />
             <hr />
-            <label for="timezoneInput">Select Your Time-zone</label>
-            <select name="timezone" id="timezoneInput">
+            <label for="timezoneSelect">Select Your Time-zone</label>
+            <select name="timezone" id="timezoneSelect">
                 <option value="UTC-12">UTC-12</option>
                 <option value="UTC-11">UTC-11</option>
                 <option value="UTC-10">UTC-10</option>
