--- a/assignments/assignment-8/assignment-8.3.html
+++ b/assignments/assignment-8/assignment-8.3.html
@@ -20,7 +20,7 @@
 
                 <label for="phoneNumberInput">Contact Number</label>
                 <input
-                    type="number"
+                    type="tel"
                     placeholder="Phone Number"
                     name="phoneNumber"
                     id="phoneNumberInput"
@@ -58,7 +58,10 @@
                 <label for="levelEducationSelect"
                     >Select your highest Level of Education</label
                 >
-                <select name="levelEducation" id="levelEducationSelect">
+                <select
+                    name="applicantLevelEducation"
+                    id="levelEducationSelect"
+                >
                     <option value="Associate Degree">Associate Degree</option>
                     <option value="Bachelor's Degree">Bachelor's Degree</option>
                     <option value="Master's Degree">Master's Degree</option>
