--- a/assignments/assignment-8/assignment-8.4.html
+++ b/assignments/assignment-8/assignment-8.4.html
@@ -49,7 +49,12 @@
                 ></textarea>
 
                 <label for="phoneNumberInput">Contact Number</label>
-                <input type="tel" name="phoneNumber" id="phoneNumberInput" />
+                <input
+                    type="tel"
+                    placeholder="Phone Number"
+                    name="phoneNumber"
+                    id="phoneNumberInput"
+                />
             </div>
             <div>
                 <label for="suggestionsTextarea"
