Fix some Mistakes

--- a/assignments/assignment-8/assignment-8.7.html
+++ b/assignments/assignment-8/assignment-8.7.html
@@ -36,7 +36,7 @@
                 />
 
                 <label for="agreementCheckboxInput"
-                    >I'm Agree to the ontest terms and conditions</label
+                    >I Agree to the ontest terms and conditions</label
                 >
                 <input
                     type="checkbox"
