Modified All Assignments

--- a/assignments/assignment-8/assignment-8.1.html
+++ b/assignments/assignment-8/assignment-8.1.html
@@ -61,25 +61,28 @@
 
             <div>
                 <h2>Select the frequency of the Newsletter</h2>
-                <label for="dailySelect">Daily</label>
+                <label for="dailyRadioInput">Daily</label>
                 <input
                     type="radio"
                     name="frequencyOfTheNewsletter"
-                    id="dailySelect"
+                    id="dailyRadioInput"
+                    value="Daily"
                 />
 
-                <label for="weeklySelect">Weekly</label>
+                <label for="weeklyRadioInput">Weekly</label>
                 <input
                     type="radio"
                     name="frequencyOfTheNewsletter"
-                    id="weeklySelect"
+                    id="weeklyRadioInput"
+                    value="Weekly"
                 />
 
-                <label for="monthlySelect">Monthly</label>
+                <label for="monthlyRadioInput">Monthly</label>
                 <input
                     type="radio"
                     name="frequencyOfTheNewsletter"
-                    id="monthlySelect"
+                    id="monthlyRadioInput"
+                    value="Monthly"
                 />
             </div>
 
