--- a/assignments/assignment-8/assignment-8.3.html
+++ b/assignments/assignment-8/assignment-8.3.html
@@ -59,8 +59,8 @@
                     >Select your highest Level of Education</label
                 >
                 <select
-                    name="applicantLevelEducation"
-                    id="levelEducationSelect"
+                    name="applicantLevelOfEducation"
+                    id="levelOfEducationSelect"
                 >
                     <option value="Associate Degree">Associate Degree</option>
                     <option value="Bachelor's Degree">Bachelor's Degree</option>
