--- a/assignments/assignment-8/assignment-8.4.html
+++ b/assignments/assignment-8/assignment-8.4.html
@@ -13,27 +13,40 @@
             <input type="text" name="fullName" id="fullNameInput" />
             <div>
                 <h2>Rate your Overall Experience</h2>
-                <label for="excellentSelect">Excellent</label>
+                <label for="excellentradioInput">Excellent</label>
                 <input
                     type="radio"
                     name="experienceRating"
-                    id="excellentSelect"
+                    id="excellentRadioInput"
+                    value="Excellent"
                 />
-                <label for="goodSelect">Good</label>
-                <input type="radio" name="experienceRating" id="goodSelect" />
-                <label for="averageSelect">Average</label>
+                <label for="goodRadioInput">Good</label>
                 <input
                     type="radio"
                     name="experienceRating"
-                    id="averageSelect"
+                    id="goodRadioInput"
+                    value="Good"
                 />
-                <label for="poorSelect">Poor</label>
-                <input type="radio" name="experienceRating" id="poorSelect" />
-                <label for="veryPoorSelect">Very Poor</label>
+                <label for="averageRadioInput">Average</label>
                 <input
                     type="radio"
                     name="experienceRating"
-                    id="veryPoorSelect"
+                    id="averageRadioInput"
+                    value="Average"
+                />
+                <label for="poorRadioInput">Poor</label>
+                <input
+                    type="radio"
+                    name="experienceRating"
+                    id="poorRadioInput"
+                    value="Poor"
+                />
+                <label for="veryPoorRadioInput">Very Poor</label>
+                <input
+                    type="radio"
+                    name="experienceRating"
+                    id="veryPoorRadioInput"
+                    value="Very Poor"
                 />
             </div>
             <div>
