Fix by PR comments

--- a/assignments/assignment-8/assignment-8.1.html
+++ b/assignments/assignment-8/assignment-8.1.html
@@ -64,7 +64,7 @@
                 <label for="dailyRadioInput">Daily</label>
                 <input
                     type="radio"
-                    name="frequencyOfTheNewsletter"
+                    name="newsletterFrequency"
                     id="dailyRadioInput"
                     value="Daily"
                 />
@@ -72,7 +72,7 @@
                 <label for="weeklyRadioInput">Weekly</label>
                 <input
                     type="radio"
-                    name="frequencyOfTheNewsletter"
+                    name="newsletterFrequency"
                     id="weeklyRadioInput"
                     value="Weekly"
                 />
@@ -80,7 +80,7 @@
                 <label for="monthlyRadioInput">Monthly</label>
                 <input
                     type="radio"
-                    name="frequencyOfTheNewsletter"
+                    name="newsletterFrequency"
                     id="monthlyRadioInput"
                     value="Monthly"
                 />
