--- a/assignments/assignment-8/assignment-8.5.html
+++ b/assignments/assignment-8/assignment-8.5.html
@@ -31,21 +31,21 @@
                 <label for="lowRadioInput">Low</label>
                 <input
                     type="radio"
-                    name="priorityOfIssue"
+                    name="issuePriority"
                     id="lowRadioInput"
                     value="Low"
                 />
                 <label for="mediumRadioInput">Medium</label>
                 <input
                     type="radio"
-                    name="priorityOfIssue"
+                    name="issuePriority"
                     id="mediumRadioInput"
                     value="Medium"
                 />
                 <label for="highRadioInput">High</label>
                 <input
                     type="radio"
-                    name="priorityOfIssue"
+                    name="issuePriority"
                     id="highRadioInput"
                     value="High"
                 />
