--- a/assignments/assignment-8/assignment-8.7.html
+++ b/assignments/assignment-8/assignment-8.7.html
@@ -35,13 +35,13 @@
                     accept="image/*"
                 />
 
-                <label for="agreementCheckboxInput"
+                <label for="agreementCheckbox"
                     >I Agree to the ontest terms and conditions</label
                 >
                 <input
                     type="checkbox"
-                    name="agreementCheckbox"
-                    id="agreementCheckboxInput"
+                    name="usersAgreement"
+                    id="agreementCheckbox"
                 />
             </div>
             <div>
