--- a/assignments/assignment-8/assignment-8.3.html
+++ b/assignments/assignment-8/assignment-8.3.html
@@ -55,17 +55,17 @@
                 />
             </div>
             <div>
-                <label for="levelEducationSelect"
+                <label for="educationLevelSelect"
                     >Select your highest Level of Education</label
                 >
                 <select
-                    name="applicantLevelOfEducation"
-                    id="levelOfEducationSelect"
+                    name="applicantEducationLevel"
+                    id="educationLevelSelect"
                 >
-                    <option value="Associate Degree">Associate Degree</option>
+                    <option value="High School">High School</option>
                     <option value="Bachelor's Degree">Bachelor's Degree</option>
                     <option value="Master's Degree">Master's Degree</option>
-                    <option value="Doctoral Degree">Doctoral Degree</option>
+                    <option value="Ph.D.">Ph.D.</option>
                 </select>
             </div>
             <div>
