--- a/assignments/index.html
+++ b/assignments/index.html
@@ -45,6 +45,46 @@
                         >Assignment-7 | Inputs</a
                     >
                 </li>
+                <li>
+                    Assignment-8 | Inputs
+                    <ol>
+                        <li>
+                            <a href="./assignment-8/assignment-8.1.html"
+                                >Assignment-8.1</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./assignment-8/assignment-8.2.html"
+                                >Assignment-8.2</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./assignment-8/assignment-8.3.html"
+                                >Assignment-8.3</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./assignment-8/assignment-8.4.html"
+                                >Assignment-8.4</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./assignment-8/assignment-8.5.html"
+                                >Assignment-8.5</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./assignment-8/assignment-8.6.html"
+                                >Assignment-8.6</a
+                            >
+                        </li>
+                        <li>
+                            <a href="./assignment-8/assignment-8.7.html"
+                                >Assignment-8.7</a
+                            >
+                        </li>
+                    </ol>
+                </li>
             </ol>
         </div>
     </body>
