Finish assignment-8 demo

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -22,7 +22,7 @@
                 <ol>
                     <li>
                         <a href="./assignment-1/index.html"
-                            >Assignment-1 | Hobbies</a
+                            >Assignment-1 | HTML basics</a
                         >
                     </li>
                     <li>
