Add concepts to Lecture-9

--- a/lectures/lecture-9/videos.html
+++ b/lectures/lecture-9/videos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
     <body>
@@ -23,3 +23,33 @@
         </video>
     </body>
 </html>
+
+<!-- Video
+
+The video tag is used to embed video content on a webpage. It is not self-closing and requires a closing tag. The src attribute can be used to specify the source URL of the video file. Additionally, you can use various attributes, such as controls, autoplay, loop, and muted to customize the video player's behavior.
+
+Example usage:
+
+
+
+In this example, the controls attribute enables the default video player controls. The text between the opening and closing video tags will be displayed if the browser does not support the video tag.It's important to note that different browsers may support different video formats. To ensure maximum compatibility, you can provide multiple video sources using the <source> element inside the video tag:
+
+The browser will choose and play the first supported video format in this example.
+
+
+
+Formats
+MP4, MOV, and WebM are all video file formats that are commonly used to deliver video content. Here's a brief comparison of each format:
+
+MP4: MP4 is a widely-supported video format that is often used for delivering video content over the internet and on mobile devices. It uses the H.264 video codec, which is highly efficient and can deliver good video quality even at lower bitrates. MP4 is a flexible format that can support a wide range of video and audio codecs, making it a popular choice for a variety of use cases.
+MOV: MOV is a video format that was developed by Apple and is commonly used on macOS and iOS devices. It is a flexible format that can support a wide range of video and audio codecs, and it is often used in professional video editing software. MOV can also support high-quality video and can be a good option for delivering video content on Apple devices.
+WebM: WebM is a video format that is designed to be used with HTML5 video and is optimized for web streaming. It uses the VP8 and VP9 video codecs, which are open-source and royalty-free and can deliver good video quality even at lower bitrates. WebM is a good option for delivering video content on the web, especially if you want to avoid licensing fees.
+In terms of compatibility, MP4 is the most widely-supported format and can be played on a wide range of devices and media players, including Windows, macOS, iOS, and Android. MOV is more commonly used on Apple devices but can also be played on other devices and media players supporting the format. WebM is less widely-supported than MP4 and MOV, but it is becoming increasingly popular and can be played on most modern web browsers without the need for additional plugins or codecs.
+
+When it comes to video quality, all three formats can deliver high-quality video, but the quality will also depend on factors such as the resolution, bitrate, and compression settings used when encoding the video. MP4 and MOV can support a broader range of video and audio codecs, which can give them an advantage in certain use cases, while WebM is optimized for web streaming and can be a good option for delivering video content on the web.
+
+Readings
+Video documentation: https://www.w3schools.com/html/html5_video.asp
+Resources
+Free Videos: https://pixabay.com/videos/
+Convert videos to another format: https://cloudconvert.com/video-converter-->
